Added wittypi path to python_config_rpi4.yml, to make wittypi scripts accessible from python

--- a/roles/configure_settings_files/templates/python_config_rpi4.yml.j2
+++ b/roles/configure_settings_files/templates/python_config_rpi4.yml.j2
@@ -14,6 +14,7 @@ INA219:
 WITTYPI4:
     installed: True
     i2c_bus: 1
+    wittypi_dir: {{ wittypi_dir }}
     
 RELAY_BOARD:
     # 2022-08-28: Pins 9 & 11 switched around in config after testing.
