--- a/roles/install_wittypi_from_git/templates/configure_wittypi.sh.j2
+++ b/roles/install_wittypi_from_git/templates/configure_wittypi.sh.j2
@@ -1,8 +1,8 @@
 #!/bin/bash
 
-WITTYPI_DEFAULT_POWER_STATE={{ wittypi_default_power_state }}
-WITTYPI_LOW_VOLTAGE_THRESHOLD={{ wittypi_low_voltage_threshold }}
-WITTYPI_RECOVERY_VOLTAGE_THRESHOLD={{ wittypi_recovery_voltage_threshold }}
+WITTYPI_DEFAULT_POWER_STATE={{ wittypi_default_power_state }}        # 1 = TURN ON; 0 = STAY OFF, when power is connected
+WITTYPI_LOW_VOLTAGE_THRESHOLD={{ wittypi_low_voltage_threshold }}    # threshold voltage * 10 (as integer)
+WITTYPI_RECOVERY_VOLTAGE_THRESHOLD={{ wittypi_recovery_voltage_threshold }}    # threshold voltage * 10 (as integer)
 
 source {{ wittypi_dir }}/utilities.sh
 
