--- a/roles/install_wittypi_from_git/templates/run_wittypi_install.sh.j2
+++ b/roles/install_wittypi_from_git/templates/run_wittypi_install.sh.j2
@@ -12,8 +12,8 @@ WITTYPI_DOWNLOAD_URL="{{ (wittypi_git_repo | splitext | first, 'archive', 'refs'
 INSTALL_UWI=false     # Set following line to 'true' to install UUGEAR Web Interface
 UWI_DOWNLOAD_URL="https://www.uugear.com/repo/UWI/installUWI.sh"
 
-WITTYPI_DEFAULT_POWER_STATE=1      # 1 = TURN ON; 0 = STAY OFF, when power is connected
-WITTYPI_LOW_VOLTAGE_THRESHOLD=55   # threshold voltage * 10 (as integer)
-WITTYPI_RECOVERY_VOLTAGE_THRESHOLD=100   # threshold voltage * 10 (as integer)
+WITTYPI_DEFAULT_POWER_STATE={{ wittypi_default_power_state }}        # 1 = TURN ON; 0 = STAY OFF, when power is connected
+WITTYPI_LOW_VOLTAGE_THRESHOLD={{ wittypi_low_voltage_threshold }}    # threshold voltage * 10 (as integer)
+WITTYPI_RECOVERY_VOLTAGE_THRESHOLD={{ wittypi_recovery_voltage_threshold }}    # threshold voltage * 10 (as integer)
 
 source {{ (install_scripts_dir, 'wittypi_install.sh') | path_join }}
